# EvoNN

./: .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE_OVERVIEW.md  BENCHMARK_EXTRACTION_PLAN.md  BENCHMARK_LADDER.md  BUDGET_ACCOUNTING_POLICY.md  BUDGET_CONTRACT.md  CONTENDER_EXPANSION_PLAN.md  CONTRIBUTING.md  EVONN_90_DAY_PLAN.md  EVONN_CONSOLIDATED_PLAN.md  EVONN_HARD_REMAINDER_PLAN.md  EVONN_NEXT_BIG_STEPS_OVERVIEW.html  EVONN_NEXT_REASONABLE_STEPS.html  EXPANDED_BENCHMARK_COMPARISON_PLAN.md  IMPLEMENTATION_NOTES.md  MONOREPO.md  OVERVIEW.md  PERFORMANCE_OPTIMIZATION_WORKFLOW.md  PRIMORDIA_DUPLICATED_CODE_NOTES.md  PROJECT_AUDIT_REPORT.md  README.md  RESEARCH_DECISION_GATE.md  ROADMAP.md  SEARCH_ENGINE_OUTPUT_PARITY_PLAN.md  SEEDING_LADDERS_IMPLEMENTATION_PLAN.md  SHARED_SUBSTRATE_FOUNDATION_PLAN.md  TELEMETRY_SPEC.md  VISION.md  pyproject.toml
EvoNN-Compare/: CANONICAL_SEEDED_VS_UNSEEDED.md  README.md  pyproject.toml
EvoNN-Compare/parity_packs/: openml_plus_shared.yaml  suite_a_bridge_shared.yaml  tier1_core.yaml  tier1_core_exploration.yaml  tier1_core_qd.yaml  tier1_core_smoke.yaml  tier2_evonn_leaning.yaml  tier3_evonn2_leaning.yaml
EvoNN-Compare/src/evonn_compare/: __init__.py  __main__.py  output_quality.py  shared_benchmarks.py  specialization.py
EvoNN-Compare/tests/: test_cli.py  test_compare.py  test_compare_hybrid_engine.py  test_compare_reporting.py  test_config_gen.py  test_contender_resolver.py  test_contract_models.py  test_evidence_registry.py  test_fair_matrix.py  test_hybrid_benchmarks.py  test_hybrid_genome.py  test_output_quality.py  test_performance_baseline.py  test_performance_contracts.py  test_performance_report.py  test_portable_compare_fallback.py  test_seeded_compare.py  test_shared_benchmarks.py  test_shared_pack_resolution.py  test_transfer_regimes.py  test_validation.py
EvoNN-Contenders/: README.md  pyproject.toml
EvoNN-Contenders/benchmarks/catalog/: airfoil.yaml  bank_marketing.yaml  blobs_f20_c5.yaml  blobs_f5_c3.yaml  blobs_std_20.yaml  blobs_std_50.yaml  blood_transfusion.yaml  circles_n05_f3.yaml  circles_n15_f3.yaml  circles_n30_f3.yaml  cls_f10_c2.yaml  cls_f20_c2.yaml  cls_f50_c5.yaml  cls_multiclass_10.yaml  cls_n200.yaml  cls_sep_50.yaml  friedman1_n00.yaml  gauss_q_f10_c5.yaml  gauss_q_f20_c2.yaml  gauss_q_f20_c5.yaml  hastie_10_2.yaml  letter.yaml  moons_n10.yaml  moons_n50.yaml  nomao.yaml  reg_f20.yaml  reg_noise_0.yaml  reg_noise_5.yaml  sparse_reg_f50.yaml  wikitext2_lm.yaml
EvoNN-Contenders/configs/: working_33_plus_5_lm_contenders.yaml  working_33_plus_5_lm_contenders_eval304.yaml  working_33_plus_5_lm_contenders_eval608.yaml  working_33_plus_5_lm_contenders_eval76.yaml  working_33_plus_5_lm_contenders_eval912.yaml
EvoNN-Contenders/configs/official_lanes/: smoke.yaml  tier1_core_eval1000.yaml  tier1_core_eval256.yaml  tier1_core_eval64.yaml  tier_b_core_eval1000.yaml  tier_b_core_eval256.yaml
EvoNN-Contenders/src/evonn_contenders/: __init__.py  cli.py  config.py  contender_pool.py  pipeline.py  storage.py
EvoNN-Contenders/tests/: test_contender_backends.py  test_run_smoke.py
EvoNN-Primordia/: ARCHITECTURE_RULES.md  BASELINE_MATRIX.md  CHANGELOG.md  IMPLEMENTATION_PLAN.md  README.md  VISION.md  pyproject.toml
EvoNN-Primordia/configs/: smoke.yaml  tier1_core_eval1000.yaml  tier1_core_eval256.yaml  tier1_core_eval64.yaml  tier_b_core_eval1000.yaml  tier_b_core_eval256.yaml
EvoNN-Primordia/docs/: QUALITY_SCORECARD.md
EvoNN-Primordia/src/evonn_primordia/: __init__.py  __main__.py  cli.py  config.py  genome.py  objectives.py  pipeline.py  search_state.py  status.py
EvoNN-Primordia/tests/: test_cli.py  test_objectives.py  test_parity.py  test_runtime_backends.py  test_search_state.py  test_seeding.py  test_smoke.py  test_status.py
EvoNN-Shared/: README.md  pyproject.toml
EvoNN-Shared/src/evonn_shared/: __init__.py  benchmarks.py  budgets.py  contracts.py  lm_cache.py  manifests.py  runs.py
EvoNN-Shared/tests/: test_consolidated_plan_policy.py  test_contracts.py  test_lm_cache.py  test_manifests.py  test_trusted_recurring_lane_docs.py
EvoNN-Topograph/: .gitignore  ARCHITECTURE_RULES.md  Makefile  README.md  VISION.md  pyproject.toml
EvoNN-Topograph/benchmarks/catalog/: adult.yaml  blobs_f10_c3.yaml  blobs_f10_c5.yaml  blobs_f20_c3.yaml  blobs_f2_c2.yaml  blobs_f2_c3.yaml  blobs_f2_c5.yaml  blobs_f50_c3.yaml  blobs_f50_c5.yaml  blobs_f5_c5.yaml  blobs_std_03.yaml  blobs_std_05.yaml  breast_cancer.yaml  circles_n02_f3.yaml  circles_n15_f5.yaml  circles_n15_f8.yaml  circles_n30_f8.yaml  cls_f100_c2.yaml  cls_f100_c5.yaml  cls_f10_c3.yaml  cls_f10_c5.yaml  cls_f50_c3.yaml  cls_f5_c2.yaml  (+44 more)
EvoNN-Topograph/configs/: tinystories_lm_smoke.yaml
EvoNN-Topograph/parity_packs/: tiny_smoke.yaml
EvoNN-Topograph/scripts/: smoke_33plus5_bench.py  smoke_41bench.py  smoke_tiny_lm.py  smoke_tinystories_lm.py  smoke_wikitext2_lm.py
EvoNN-Topograph/tests/: test_canonical_metrics.py  test_cli_smoke_e2e.py  test_config_storage_cli_export.py  test_failure_paths.py  test_lm_support.py  test_parallel_limits.py  test_runtime_regressions.py  test_search_primitives.py  test_smoke_33plus5.py
(+425 files in other folders)
