[project]
name = "evonn-primordia"
version = "0.1.0"
description = "Primitive-first evolutionary search for EvoNN"
requires-python = ">=3.13"
dependencies = [
    "evonn-contenders",
    "prism",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "typer>=0.15.1",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
primordia = "evonn_primordia.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evonn_primordia"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
evonn-contenders = { workspace = true }
prism = { workspace = true }
